--- a/trunk/encrypted-web-proxy-localserver/encrypted-web-proxy-localserver/encrypted-web-proxy-localserver.vcproj
+++ b/trunk/encrypted-web-proxy-localserver/encrypted-web-proxy-localserver/encrypted-web-proxy-localserver.vcproj
@@ -112,8 +112,9 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
+				Optimization="0"
 				EnableIntrinsicFunctions="true"
+				AdditionalIncludeDirectories="&quot;D:\Downloads\openssl-1.0.0\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -132,8 +133,11 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="libeay32.lib"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="&quot;D:\Downloads\openssl-1.0.0\out32dll&quot;"
 				GenerateDebugInformation="true"
+				GenerateMapFile="true"
 				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
